Gui works inside client and can be played with a terminal player.